# Yumetsuki

./: .gitignore  CLAUDE.md  README.md  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements-sidecar.txt  requirements.txt  settings.py
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: diagnostics.json  main.json  pet.json  settings.json
apps/desktop/src-tauri/permissions/: chat-core.toml  chat-send-only.toml  config-read.toml  config-write.toml  diagnostics-run.toml  logs-read.toml  mcp-bridge.toml  plugins-bridge.toml  security-grants.toml  sidecar-cancel-only.toml  sidecar-lifecycle.toml  tools-bridge.toml
apps/desktop/src-tauri/permissions/autogenerated/: chat_retry.toml  chat_send.toml  config_get_all.toml  config_save_system.toml  diagnostics_export.toml  diagnostics_run.toml  logs_query.toml  mcp_call_tool.toml  mcp_list_servers.toml  mcp_refresh.toml  plugins_disable.toml  plugins_enable.toml  plugins_refresh.toml  plugins_status.toml  security_list_grants.toml  sidecar_cancel.toml  sidecar_health.toml  sidecar_hello.toml  (+4 more)
apps/desktop/src-tauri/src/: audio.rs  capability_manifest.rs  command_catalog.rs  error_codes.rs  lib.rs  main.rs  path_scope.rs  recorder.rs  rpc.rs  rpc_schema.rs  runtime_paths.rs  sidecar.rs  url_safety.rs
apps/desktop/src-tauri/tests/: capability_manifest.rs  command_catalog.rs  error_codes.rs  media_contract.rs  phase4_bridge_static.rs  rpc_contract.rs  runtime_paths.rs  runtime_paths_schema.rs  sidecar_contract.rs  supervisor_lifecycle.rs  url_path_safety.rs
(+426 files in other folders)
