[package]
name = "yumetsuki-desktop"
version = "0.1.0"
description = "Yumetsuki Tauri 桌面壳"
authors = ["Yumetsuki contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "yumetsuki_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "yumetsuki-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
thiserror = "1"

[dev-dependencies]
toml = "0.8"
